--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -492,7 +492,7 @@ td, th {
  * ------------------------------------	 */
 .gigantic, .huge, .large, .bigger, .big,
 h1, h2, h3, h4, h5, h6 {
-  color: #333;
+  color: #ff9900;
   font-weight: bold; }
 
 .gigantic {
@@ -540,20 +540,20 @@ hr {
 /* Links
  * ------------------------------------	 */
 a {
-  color: #c99065;
+  color: #ff9900;
   text-decoration: none;
   outline: 0; }
 
 a:hover, a:focus {
-  color: #e3c6b1; }
+  color: #ffc266; }
 
 /* Selection colors (easy to forget)
  * ------------------------------------	 */
 ::selection {
-  background: #f1e2d6; }
+  background: #ffd699; }
 
 ::-moz-selection {
-  background: #f1e2d6; }
+  background: #ffd699; }
 
 img::selection {
   background: transparent; }
@@ -562,7 +562,7 @@ img::-moz-selection {
   background: transparent; }
 
 body {
-  -webkit-tap-highlight-color: #f1e2d6; }
+  -webkit-tap-highlight-color: #ffd699; }
 
 /* Basic Styles
  * ------------------------------------	 */
@@ -580,7 +580,7 @@ svg {
   width: 100%; }
 
 h3 {
-  color: #e1c285;
+  color: #ffde38;
   text-align: center;
   padding: 100px 0 30px; }
 
@@ -593,10 +593,10 @@ fieldset {
   h3 {
     padding: 50px 0 50px; } }
 .alt-section {
-  background: #e5eaee;
+  background: #d2d2d2;
   padding-bottom: 100px; }
   .alt-section h3 {
-    color: #d7ae5c; }
+    color: rgba(0, 0, 0, 0.7); }
 
 h3, header nav a, header .kicker, footer .lockup .content-wrap a {
   font-size: 14px;
@@ -678,6 +678,9 @@ footer {
         footer .lockup .content-wrap a:hover {
           color: #ff9900; }
 
+h3 {
+  color: #ff9900; }
+
 .face-lockup {
   max-width: 780px;
   display: -webkit-box;
@@ -687,78 +690,25 @@ footer {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 auto;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -o-justify-content: space-between;
-  justify-content: space-between;
-  -ms-flex-pack: justify; }
+  margin: 0 auto; }
   .face-lockup .face-img {
     border-radius: 50%;
     background-size: cover;
-    background-position: center;
+    display: block;
+    background-position: center center;
+    background-repeat: no-repeat;
+    margin: 0 auto 30px;
     background-image: url(../img/travitar.jpg);
-    height: 200px;
-    width: 200px;
-    -webkit-box-ordinal-group: 3;
-    -moz-box-ordinal-group: 3;
-    box-ordinal-group: 3;
-    -webkit-order: 3;
-    -moz-order: 3;
-    order: 3;
-    -ms-flex-order: 3; }
+    height: 250px;
+    width: 250px; }
   .face-lockup [class^="icon-"] {
     height: 100px;
     width: 100px;
-    background: #e5eaee;
-    border-radius: 50%; }
+    background: #d2d2d2;
+    border-radius: 50%;
+    position: center; }
     .face-lockup [class^="icon-"] path {
-      fill: #c99065; }
-    .face-lockup [class^="icon-"].icon-pencil {
-      -webkit-box-ordinal-group: 1;
-      -moz-box-ordinal-group: 1;
-      box-ordinal-group: 1;
-      -webkit-order: 1;
-      -moz-order: 1;
-      order: 1;
-      -ms-flex-order: 1; }
-    .face-lockup [class^="icon-"].icon-mouse {
-      -webkit-box-ordinal-group: 2;
-      -moz-box-ordinal-group: 2;
-      box-ordinal-group: 2;
-      -webkit-order: 2;
-      -moz-order: 2;
-      order: 2;
-      -ms-flex-order: 2; }
-    .face-lockup [class^="icon-"].icon-browser {
-      -webkit-box-ordinal-group: 4;
-      -moz-box-ordinal-group: 4;
-      box-ordinal-group: 4;
-      -webkit-order: 4;
-      -moz-order: 4;
-      order: 4;
-      -ms-flex-order: 4; }
-    .face-lockup [class^="icon-"].icon-video {
-      -webkit-box-ordinal-group: 5;
-      -moz-box-ordinal-group: 5;
-      box-ordinal-group: 5;
-      -webkit-order: 5;
-      -moz-order: 5;
-      order: 5;
-      -ms-flex-order: 5; }
+      fill: #ff9900; }
 
 @media screen and (max-width: 650px) {
   .face-lockup {
@@ -772,11 +722,7 @@ footer {
       background-repeat: no-repeat;
       margin: 0 auto 30px; }
     .face-lockup [class^="icon-"] {
-      margin: 10px 9%; }
-
-  .skill-unit {
-    width: 270px;
-    float: center; } }
+      margin: 10px 9%; } }
 .blurb {
   max-width: 620px;
   padding: 0 20px;
@@ -785,99 +731,13 @@ footer {
   text-align: center;
   font-weight: 300; }
 
-.skill-lockup {
-  max-width: 540px;
-  margin: 100px auto;
-  color: #999; }
-  .skill-lockup:after {
-    content: "";
-    display: table;
-    clear: both; }
-  .skill-lockup .skill-unit {
-    width: 270px;
-    float: left; }
-  .skill-lockup .skill-icons {
-    font-size: 0;
-    margin: 3px 0 30px; }
-    .skill-lockup .skill-icons span {
-      display: inline-block;
-      height: 14px;
-      width: 14px;
-      background-color: #c99065;
-      margin-right: 8px;
-      border-radius: 50%; }
-      .skill-lockup .skill-icons span:after {
-        content: "";
-        display: block;
-        height: 10px;
-        width: 10px;
-        background: #fff;
-        border-radius: 50%;
-        margin: 2px; }
-
-.skill-lockup .skill-icons.skill-1 span:nth-child(n+2), .skill-lockup .skill-icons.skill-2 span:nth-child(n+3), .skill-lockup .skill-icons.skill-3 span:nth-child(n+4), .skill-lockup .skill-icons.skill-4 span:nth-child(n+5), .skill-lockup .skill-icons.skill-5 span:nth-child(n+6), .skill-lockup .skill-icons.skill-6 span:nth-child(n+7), .skill-lockup .skill-icons.skill-7 span:nth-child(n+8), .skill-lockup .skill-icons.skill-8 span:nth-child(n+9), .skill-lockup .skill-icons.skill-9 span:nth-child(n+10), .skill-lockup .skill-icons.skill-10 span:nth-child(n+11) {
-  background: #e5eaee; }
-
-@media screen and (max-width: 541px) {
-  .skill-lockup {
-    width: 220px; }
-    .skill-lockup .skill-unit {
-      width: 220px; } }
 .section-work {
   overflow-x: hidden; }
 
-/* Hackey-type CSS as a jQuery Alternative for when the browser does not have jQuery enabled. */
-.noscript {
-  display: none; }
-
-#proj-1:checked ~ .work-belt .work-wrap .work-container noscript #content-proj-1 {
-  display: block; }
-
-#proj-2:checked ~ .work-belt .work-wrap .work-container noscript #content-proj-2 {
-  display: block; }
-
-#proj-3:checked ~ .work-belt .work-wrap .work-container noscript #content-proj-3 {
-  display: block; }
-
-#proj-4:checked ~ .work-belt .work-wrap .work-container noscript #content-proj-4 {
-  display: block; }
-
-#proj-5:checked ~ .work-belt .work-wrap .work-container noscript #content-proj-5 {
-  display: block; }
-
-#proj-6:checked ~ .work-belt .work-wrap .work-container noscript #content-proj-6 {
-  display: block; }
-
-#proj-7:checked ~ .work-belt .work-wrap .work-container noscript #content-proj-7 {
-  display: block; }
-
-#proj-8:checked ~ .work-belt .work-wrap .work-container noscript #content-proj-8 {
-  display: block; }
-
-.return {
-  display: none; }
-
-.trigger {
-  display: none; }
-  .trigger:checked ~ .work-belt {
-    left: -100%; }
-    .trigger:checked ~ .work-belt .work-wrap .work-container {
-      display: block; }
-
-/* End of gross / hackey CSS */
 .work-belt {
   width: 200%;
   position: relative;
-  left: 0%;
-  -webkit-transition: all, 800ms;
-  -moz-transition: all, 800ms;
-  transition: all, 800ms; }
-  .work-belt.slided {
-    -webkit-transform: translate3d(-50%, 0, 0);
-    -moz-transform: translate3d(-50%, 0, 0);
-    -ms-transform: translate3d(-50%, 0, 0);
-    -o-transform: translate3d(-50%, 0, 0);
-    transform: translate3d(-50%, 0, 0); }
+  left: 0%; }
 
 .thumb-wrap, .work-wrap {
   width: 50%;
@@ -933,7 +793,7 @@ footer {
       display: -moz-flex;
       display: -ms-flexbox;
       display: flex;
-      background: rgba(201, 144, 101, 0.9);
+      background: rgba(255, 153, 0, 0.9);
       text-align: center; }
       .thumb-container label .thumb-overlay strong {
         display: block;
@@ -956,7 +816,7 @@ footer {
   position: relative;
   display: none; }
   .work-container h4, .work-container noscript h4 {
-    color: #c99065;
+    color: #ff9900;
     font-weight: 300;
     text-transform: uppercase;
     font-size: 28px;
@@ -1062,7 +922,7 @@ footer {
     opacity: 0.5; }
     .clients-logos .client-logo.active-client {
       opacity: 1;
-      border-bottom: 4px solid #c99065; }
+      border-bottom: 4px solid #ff9900; }
 
 .client-quote-mark {
   position: absolute;
@@ -1073,7 +933,7 @@ footer {
   z-index: -1;
   opacity: 0.3; }
   .client-quote-mark path {
-    fill: #c99065; }
+    fill: #ff9900; }
 
 .client-controls {
   position: absolute;
@@ -1088,7 +948,7 @@ footer {
     margin-top: -20px;
     cursor: pointer; }
     .client-controls > div path {
-      fill: #c99065; }
+      fill: #ff9900; }
   .client-controls .client-control-next {
     position: absolute;
     top: 50%;
@@ -1108,11 +968,11 @@ footer {
     height: 16px;
     width: 16px;
     border-radius: 50%;
-    border: solid 2px #e5eaee;
+    border: solid 2px #d2d2d2;
     margin: 0px 10px;
     cursor: pointer; }
     .clients-mobile-nav span.active-client {
-      border-color: #c99065; }
+      border-color: #ff9900; }
 
 @media (max-width: 750px) {
   .clients-logos {
@@ -1179,11 +1039,11 @@ footer {
   flex-wrap: wrap; }
   .social-links a {
     display: block;
-    border: 2px solid #c99065;
+    border: 2px solid #ff9900;
     height: 50px;
     width: 50px;
     line-height: 50px;
-    color: #c99065;
+    color: #ff9900;
     border-radius: 50%;
     font-size: 28px;
     margin: 20px;
@@ -1196,7 +1056,7 @@ footer {
       right: 0px;
       bottom: 0px;
       left: 0px;
-      border: 2px solid #c99065;
+      border: 2px solid #ff9900;
       border-radius: 50%;
       margin: -2px;
       opacity: 1;
@@ -1214,7 +1074,7 @@ footer {
 .bar {
   width: 250px;
   height: 0px;
-  border-top: 4px solid #c99065;
+  border-top: 4px solid #ff9900;
   margin: 0px auto 50px; }
 
 .biglink {
@@ -1230,7 +1090,7 @@ form {
   margin: 0 auto 100px;
   padding: 0 20px; }
   form input, form textarea {
-    border: 3px solid #c99065;
+    border: 3px solid #666;
     width: 100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -1242,20 +1102,21 @@ form {
     font-size: 16px; }
     form input:focus, form textarea:focus {
       outline: none;
-      border-color: #e1c285; }
+      border-color: #ff9900; }
   form textarea {
     height: 10em;
     resize: none; }
   form .submit-wrap {
     text-align: right; }
   form [type="submit"] {
-    background: #c99065;
+    background: #666;
     color: white;
     font-size: 18px;
     text-transform: uppercase;
     width: 33%; }
     form [type="submit"]:hover {
-      background: #e1c285; }
+      background: #ff9900;
+      border-color: #ff9900; }
   form .contact-info-group label {
     width: 50%;
     float: left;
@@ -1282,7 +1143,7 @@ form {
   form [type="submit"] {
     width: 100%; } }
 .form-success {
-  background: #e5eaee;
+  background: #d2d2d2;
   text-align: center; }
   .form-success p {
     font-size: 18px; }
