--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -726,7 +726,7 @@ h3 {
 .blurb {
   max-width: 620px;
   padding: 0 20px;
-  margin: 50px auto;
+  margin: 50px auto 140px;
   font-size: 24px;
   text-align: center;
   font-weight: 300; }
